@@ -3,6 +3,9 @@ Changelog
 
 5.3-dev - (unreleased)
 ----------------------
+* Feature: added a checkbox enabled by default that will add also the 
+  individual countries that are part of a country group
+  [ichimdav #9998]
 * WIP: added clustering support to map view
   [ichimdav #7337]
 * Change: switched to version 2.8 of the arcgis Dojo library in order to have
